Video overlaping solved

--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -124,7 +124,7 @@
     right: 0;
 
     .video-zone {
-      width: 600px;
+      width: 550px;
       right: 0;
       top: 0;
       height: 50vh;
@@ -145,7 +145,7 @@
         position: absolute;
         top: 10px;
         left: 0;
-        z-index: 999999999;
+        z-index: 999;
         width: 200px;
         padding: 10px;
         color: #fff;
@@ -170,7 +170,7 @@
     }
 
     .video-zone2 {
-      width: 600px;
+      width: 550px;
       bottom: 0;
       right: 0;
       height: 50vh;
@@ -396,17 +396,26 @@
 
   .video-container {
     display: flex;
-    justify-content: space-between;
+    margin: 2px;
     flex-direction: column;
     left: 0px;
   }
 
-  .video-zone {
-    margin-bottom: 10px;
+  .pokemon-inactive {
+    width: 300px;
+    position: absolute;
+    left: 0;
+    overflow: hidden;
   }
 
-  video {
-    width: 100%;
+  .video-zone2 {
+    position: relative;
+    top: 200px;
+  }
+  .flymate-inactive {
+    width: 300px;
+    position: absolute;
+    left: 0;
     overflow: visible;
   }
 
